# digital-asset-purchase-harvester

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  Dockerfile  GOAL.md  Makefile  README.md  SETUP.md  STANDARDS.md  advanced_config.py  check_venv.py  cleanup.ps1  config.py  credentials.json  credentials.json.example  csv_writer.py  docker-compose.yml  docker-entrypoint.sh  email_purchase_extractor.py  file_utils.py  main.py  mbox_data_extractor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_web.py  setup.bat  setup.ps1  setup.sh  test_improvements.py  test_setup.py  tmpcfg.toml
.github/workflows/: ci.yml
digital_asset_harvester/: __init__.py  cli.py  confidence.py  config.py  py.typed
digital_asset_harvester/blockchain/: __init__.py  vault.py
digital_asset_harvester/exporters/: blockchain_tax_calculator.py  cointracker.py  cra.py  cryptotaxcalculator.py  koinly.py
digital_asset_harvester/ingest/: __init__.py  email_parser.py  email_purchase_extractor.py  eml_reader.py  gmail_client.py  imap_client.py  mbox_data_extractor.py  mbox_reader.py  oauth.py  outlook_client.py
digital_asset_harvester/integrations/: __init__.py  blockchain_verifier.py  koinly_api_client.py
digital_asset_harvester/llm/: __init__.py  anthropic_client.py  cache.py  cache_client.py  client.py  fallback_client.py  ollama_client.py  openai_client.py  provider.py
digital_asset_harvester/output/: __init__.py  csv_writer.py  koinly_api_client.py  koinly_writer.py
digital_asset_harvester/parsers/: __init__.py  definitions.py  engine.py  models.py  registry.py
digital_asset_harvester/processing/: __init__.py  constants.py  email_purchase_extractor.py
digital_asset_harvester/prompts/: __init__.py  manager.py
digital_asset_harvester/telemetry/: __init__.py  logging_utils.py  metrics.py
digital_asset_harvester/utils/: __init__.py  asset_mapping.py  data_utils.py  deduplication.py  file_utils.py  fx_rates.py  pii_scrubber.py  sync_state.py
digital_asset_harvester/validation/: __init__.py  schemas.py  validators.py
digital_asset_harvester/web/: api.py  main.py  run.py
docs/: EXCHANGE_FORMATS.md  OLLAMA_SETUP_WINDOWS.md  TROUBLESHOOTING.md
tests/: __init__.py  conftest.py  mock_blockchain_core.py  test_binance_extraction.py  test_blockchain_verification.py  test_cli.py  test_cli_blockchain_integration.py  test_cli_v2.py  test_config.py  test_cra_pdf_exporter.py  test_csv_writer.py  test_data_utils.py  test_email_classification.py  test_email_purchase_extractor.py  test_extraction_logic.py  test_file_utils.py  test_koinly_api_client.py  test_koinly_writer.py  test_llm_client.py  test_llm_factory.py  test_logging_utils.py  test_mbox_reader.py  test_metrics.py  test_multiprocessing.py  test_ollama_llm_client.py  test_pii_integration.py  test_pii_scrubber.py  test_progress_reporting.py  test_prompt_manager.py  test_regex_extractors.py  test_schemas.py  test_validation.py  test_validators.py  test_vault.py
tests/exporters/: test_blockchain_tax_calculator.py  test_cointracker.py  test_koinly.py
tests/fixtures/: emails.py  golden.mbox  golden_expected.json  sample.mbox  test_emails.mbox  test_parallel.mbox
tests/ingest/: test_email_parser.py  test_eml_reader.py  test_gmail_client.py  test_imap_client.py  test_mbox_reader.py  test_outlook_client.py
(+51 files in other folders)
